modules/vpc-module/main.tf
resource "aws_vpc" "vpc" {

  cidr_block = "10.0.0.0/16"
  instance_tenancy        = "default"
  enable_dns_hostnames    = true
  tags = {
    Name = "MysampleInstance"
  }

}
# Create Internet Gateway and Attach it to VPC
# terraform aws create internet gateway
resource "aws_internet_gateway" "internet-gateway" {
vpc_id    = aws_vpc.vpc.id
tags = {
Name    = "internet_gateway"
}
}

data "aws_availability_zones" "available" {
  state = "available"
}

# Create Public Subnet 1
# terraform aws create subnet
resource "aws_subnet" "public-subnet-1" {
vpc_id                  = aws_vpc.vpc.id
cidr_block              = "10.0.0.0/24"
availability_zone       = data.aws_availability_zones.available.names[0]
map_public_ip_on_launch = true
tags      = {
Name    = "public-subnet-1"
}
}
# Create Route Table and Add Public Route
# terraform aws create route table
resource "aws_route_table" "public-route-table" {
vpc_id       = aws_vpc.vpc.id
route {
cidr_block = "0.0.0.0/0"
gateway_id = aws_internet_gateway.internet-gateway.id
}
tags       = {
Name     = "Public Route Table"
}
}
# Associate Public Subnet 1 to "Public Route Table"
# terraform aws associate subnet with route table
resource "aws_route_table_association" "public-subnet-1-route-table-association" {
subnet_id           = aws_subnet.public-subnet-1.id
route_table_id      = aws_route_table.public-route-table.id
}
